03.service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: learn
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: xcall-backend-svc
  namespace: learn
spec:
  type: ClusterIP
  selector:
    app: xcall-backend
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: xcall-frontend-svc
  namespace: learn
spec:
  type: ClusterIP
  selector:
    app: xcall-frontend
  ports:
    - port: 80
      targetPort: 3000
